# onda-engine

./: .gitignore  .npmrc  .release-please-manifest.json  .vendor-entry.mjs  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE.md  PUBLISHING.md  README.md  SECURITY.md  biome.json  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json
.changeset/: README.md  card-showcase.md  fsl-relicense.md  keyframes-align-slots.md
.github/workflows/: changeset-check.yml  ci.yml  embed-kit-autobump.yml  release-npm.yml  release-packages.yml  release.yml
apps/benchmark/: CHANGELOG.md  README.md  bench-onda.mjs  bench.mjs  package.json
apps/benchmark/src/: Bench.tsx  Root.tsx
apps/docs/: index.md  package.json
apps/docs/.vitepress/: config.mts
apps/docs/.vitepress/theme/: custom.css  index.ts
apps/docs/api/: animation.md  cli.md  hooks.md  react.md  render.md  scene-json.md  timeline.md
apps/docs/concepts/: composition.md  scene-graph.md  transforms.md
apps/docs/examples/: animated.md  hello.md  index.md  svg.md  vector.md
apps/docs/guide/: architecture.md  authoring-react.md  backends.md  getting-started.md  introduction.md  rendering.md  svg.md  typography.md  why-onda.md
apps/landing/: index.html  main.js  screenshot.mjs  styles.css
apps/playground/: CHANGELOG.md  index.html  package.json  screenshot.mjs  vite.config.ts
apps/playground/src/: App.tsx  main.tsx
apps/preview/: CHANGELOG.md  README.md  index.html  package.json  vite.config.ts
apps/preview/src/: App.tsx  main.tsx
apps/site/: astro.config.mjs  package.json
apps/site/public/: gallery-sample.webm
apps/site/public/cinema/: SOURCE.txt
apps/site/scripts/: aura.comp.mjs  brand-grid.comp.mjs  captions-demo.comp.mjs  cinema-plate.comp.mjs  debug-frame.mjs  diff-recap.comp.mjs  engine-hero.comp.mjs  export-dialog-art.comp.mjs  flows-full.comp.mjs  flows-hero.comp.mjs  flows-shot1.comp.mjs  flows-shot2a.comp.mjs  flows-shot2b.comp.mjs  flows-shot2c.comp.mjs  grain-test.comp.mjs  lightwrap-test.comp.mjs  mask-images.comp.mjs  mask-reveal-demo.comp.mjs  morph-strip.comp.mjs  parallax-demo.comp.mjs  premium-hero.comp.mjs  reel.comp.mjs  render-comp.mjs  shut-up.comp.mjs  spot-check.mjs  vogue-demo.comp.mjs  voice-film-pilot.comp.mjs  voice-kinetic-test.comp.mjs
apps/site/src/: content.config.ts
apps/site/src/components/: BeatSyncPlayer.tsx  CodeBlock.tsx  CopyButton.tsx  EffectsGallery.tsx  OndaDemo.tsx  OndaGallery.tsx  OndaPlayer.tsx  OndaShowcase.tsx  ThemeControls.tsx  TransitionsGallery.tsx  authoring.ts  component-props.ts  gallery-data.ts  snippet.ts  theme-spec.ts  theme-store.ts
apps/site/src/content/docs/api/: animation.md  cli.md  hooks.md  react.md  render.md  scene-json.md  timeline.md  timeline.mdx  transitions.md
apps/site/src/content/docs/concepts/: composition.md  scene-graph.md  transforms.md
apps/site/src/content/docs/examples/: animated.md  hello.md  index.md  live.mdx  svg.md  vector.md
apps/site/src/content/docs/guide/: 3d.md  architecture.md  audio.md  authoring-react.md  backends.md  composing.md  effects.md  getting-started.md  introduction.md  layout.md  layout.mdx  media.md  rendering.md  svg.md  theming.md  typography.md  why-onda.md
apps/site/src/pages/: benchmark.astro  components.astro  effects.astro  index.astro  llms.txt.ts  transitions.astro
apps/site/src/pages/api/: components.json.ts
apps/site/src/scripts/: wave-hero.ts
apps/site/src/styles/: brand.css
assets/brand/: BRAND.md
examples/: hello-onda.json  hello-onda.movie.json
scripts/: build-embed-kit.sh  build-studio-bundle.sh  maybe-bump-embed-kit.sh  onda-engine.d.ts
techspecs/: cinematic-finish-build.md  cinematic-layer-plan.md  composition-craft-notes.md  engine-power-vs-ae.md  engine-revolution-roadmap.md  founding-brief.md  gap-analysis.md  gpu-resident-finishing.md  library-north-star.md  nle-node-shape.md  premium-composition-gaps.md  premium-composition-research.md  premium-engine-map.md  render-to-texture.md  roadmap-editor-and-agent.md  studio-element-detection-strategy.md  studio-migration.md  studio-vision-correction-loop.md  text-animators.md  voice-film-the-long-note.md
