[workspace]
resolver = "2"
# Crates join this list as they gain real implementations. Planned (empty dirs
# scaffolded under packages/, added once they compile): vector-rs, audio-rs,
# codecs-rs.
members = [
    "packages/core-rs",
    "packages/scene-rs",
    "packages/renderer-rs",
    "packages/typography-rs",
    "packages/animation-rs",
    "packages/cli-rs",
    "packages/wasm",
    "packages/wasm-vello",
    "packages/bench-rs",
    "packages/vello-rs",
    "packages/svg-rs",
    "packages/image-rs",
    "packages/layout-rs",
    "packages/audio-rs",
    "packages/video-rs",
    "packages/wasm-audio",
    # Native-only (ort/onnxruntime can't target wasm32); a workspace member for
    # `cargo build/test`, but only an onda-cli dependency under the `segment`
    # feature, so it never leaks into the wasm builds.
    "packages/segment-rs",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/degueba/onda-engine"
homepage = "https://github.com/degueba/onda-engine"
authors = ["The ONDA Engine contributors"]

# Shared dependency versions. Resolved/pinned at build time; bump in one place.
[workspace.dependencies]
onda-core = { path = "packages/core-rs", version = "0.0.0" }
onda-scene = { path = "packages/scene-rs", version = "0.0.0" }
onda-typography = { path = "packages/typography-rs", version = "0.0.0" }
onda-renderer = { path = "packages/renderer-rs", version = "0.0.0" }
onda-animation = { path = "packages/animation-rs", version = "0.0.0" }
onda-vello = { path = "packages/vello-rs", version = "0.0.0" }
onda-svg = { path = "packages/svg-rs", version = "0.0.0" }
onda-image = { path = "packages/image-rs", version = "0.0.0" }
onda-layout = { path = "packages/layout-rs", version = "0.0.0" }
# default-features off (no native-io / std::fs) so the wasm build is clean;
# the native CLI opts back in with `features = ["native-io"]`.
onda-audio = { path = "packages/audio-rs", version = "0.0.0", default-features = false }
onda-video = { path = "packages/video-rs", version = "0.0.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
# CPU rasterization for the reference backend (native headless + browser-without-
# WebGPU fallback). tiny-skia is the pure-Rust Skia raster pipeline behind resvg
# (gradients/paths/strokes/AA/clipping); kurbo parses SVG path data. Both build on
# wasm32. tiny-skia 0.11 aligns with the in-tree tiny-skia-path (via usvg).
tiny-skia = "0.11"
kurbo = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Faster debug builds for the GPU/encoding dependency tree.
[profile.dev.package."*"]
opt-level = 2
